fixed overflow issues

--- a/ensography/static/css/main.css
+++ b/ensography/static/css/main.css
@@ -11,7 +11,6 @@ img { display: block }
 html {
     padding: 0;
     margin: 0;
-    overflow: 
 }
 body {
     font: bold 100px/100px Georgia, Times, serif;
@@ -52,6 +51,8 @@ html, body {
 body {
     background-image: url(/static/img/surface.png);
     background-size: 288px;
+    overflow: hidden;
+    overflow-y: scroll; 
 }
 
 .wrapper-main {
